Fix link z-index issues

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -26,6 +26,10 @@ p {
   line-height: 1.75;
 }
 
+a {
+  z-index: 100;
+}
+
 .text-faded {
   color: rgba(255, 255, 255, 0.3);
 }
